ゲームのスキーマにお宝の数を追加
